force-app/main/default/objects/Admin_Task__c/Admin_Task__c.object-meta.xml
<CustomObject>
    <description>Admin work items: onboarding checklists, security reviews, data imports, automation builds, dashboards and deployments. Wired to the AutomationService and to flow-driven follow-ups.</description>
    <label>Admin Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>