force-app/main/default/objects/Admin_Task__c/fields/Admin_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Admin_Task_Number__c</fullName>
    <label>Admin Task Number</label>
    <type>AutoNumber</type>
    <displayFormat>AT-{00000}</displayFormat>
</CustomField>