force-app/main/default/objects/Admin_Task__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <label>Task Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Admin Tasks</relationshipLabel>
    <relationshipName>Admin_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>