force-app/main/default/objects/Admin_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <defaultValue>Onboarding</defaultValue>
    <label>Task Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Security Review</fullName>
            </value>
            <value>
                <fullName>Data Import</fullName>
            </value>
            <value>
                <fullName>Automation Build</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>